Add transformer debug with ClassFile